--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -952,7 +952,7 @@ about:
   subtitle:
   avatar: /img/avatar.png
   name: "Leo Hou"
-  intro: "一蓑烟雨，两袖清风"
+  intro: "业精于勤，荒于嬉；行成于思，毁于随。"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
